2003-04-24  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/partition_files.h: typo
	* libpp/profile.cpp: difficult to get right result with a random value
	  in profile::start_offset

	* pp/opreport_options.h: export options::reverse_sort
	* pp/opreport_options.cpp: bailout if we get multiple counter

	* pp/opreport.cpp: raw output result for application (not symbol)
	  output.

2003-04-24  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/filename_spec.h:
	* libpp/filename_spec.cpp:
	* libpp/parse_cmdline.h:
	* libpp/parse_cmdline.cpp:
	* libpp/split_sample_filename.h:
	* libpp/split_sample_filename.cpp: s/unit_mask/unitmask

	* libpp/merge_spec.cpp:
	* libpp/merge_spec.h: rename to
	* libpp/partition_files.h:
	* libpp/partition_files.cpp: here. Add and merge_option.
	  partition_files is now a class.
	* pp/opreport_options.h:
	* pp/opreport_options.cpp:
	* pp/opreport.cpp: update according to the above. Add a roughly support
	  to count samples for plain op_time opreport like

2003-04-24  John Levon  <levon@movementarian.org>

	* libpp/profile_container.h:
	* libpp/profile_container.cpp: chop off the _t of the class name

	* libpp/format_output.cpp:
	* libpp/format_output.h:
	* libpp/symbol_container.cpp:
	* libpp/symbol_container.h:
	* pp/op_time.cpp:
	* pp/op_to_source.cpp:
	* pp/oprofpp.cpp: changes from the above

2003-04-24  John Levon  <levon@movementarian.org>

	* libpp/profile_container.h:
	* libpp/profile_container.cpp: pedantry for sample_container
	indices.

	* libpp/sample_container.h:
	* libpp/sample_container.cpp: various cleanups and docs. Add
	and use size_type.

	* libpp/symbol_container.h:
	* libpp/symbol_container.cpp: renamings. Add and use size_type.

2003-04-24  John Levon  <levon@movementarian.org>

	* libpp/symbol_container.h:
	* libpp/symbol_container.cpp: remove unused operator[].
	Add some docs. Some small cleanups

2003-04-24  Dave Jones <davej@codemonkey.org.uk>

	* events/x86-64.hammer.events: